feat: add article schema build-in for Post type

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -2,7 +2,8 @@
   "_cts": {
     "post": {},
     "resource": {},
-    "landing": {}
+    "landing": {},
+    "category": {}
   },
   "slices": {
     "Hero": {},
